# service/DevelopersService.js
@@ -22,6 +22,29 @@ exports.getAllMuseum = function() {
     }
   });
 }
+const toRadian = (degree) =>{
+  var pi = Math.PI;
+  return degree * (pi/180);
+}
+const calculDistance = (longA, latA, longB, latB) => {
+  const res =  Math.acos(Math.sin(toRadian(latA))*Math.sin(toRadian(latB)) + Math.cos(toRadian(latA))*Math.cos(toRadian(latB))*Math.cos(toRadian(longA) - toRadian(longB)))*6371;
+  console.log("distance calcul :", res, "long:", longA, "lat:", latA);
+  return res;
+}
+
+exports.getNearlyMuseum = function() {
+  return new Promise(async function(resolve, reject) {
+    const examples = await Museum.find();
+
+    examples['application/json'] = {};
+    if (Object.keys(examples).length > 0) {
+      const listFilter = examples.filter(e => calculDistance(e.long, e.lat, 48.90173470211192, 2.2085066531557973) <= 10)
+      resolve(listFilter);
+    } else {
+      resolve();
+    }
+  });
+}
 
 
 /**
